.provarCaches/00D6C0000000xA6UAI/objects/sked__Templated_Job_Product__c.object
<CustomObject>
    <fields>
        <fullName>sked__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Templated Job Products</relationshipLabel>
        <relationshipName>Templated_Job_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Templated_Job__c</fullName>
        <label>Templated Job</label>
        <referenceTo>sked__Templated_Job__c</referenceTo>
        <relationshipLabel>Templated Job Products</relationshipLabel>
        <relationshipName>Templated_Job_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Templated Job Product</label>
    <nameField>
        <displayFormat>TJP-{0000}</displayFormat>
        <label>Templated Job Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Job Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>